--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -77,7 +77,7 @@
     <div class="container" style="padding: 0px">
         <div class="row" style="padding: 0px; margin: 0px">
         <!-- First Column : Profile page card -->
-            <div class="col s12 m12 l4">
+            <div class="col s12 m12 l4 xl4">
                 <br><br>
                 <div class="card " style="width: 100%">
                     <div class="card-image">
@@ -100,11 +100,11 @@
                     <div class="card-content">
                       <div class="container">
                           <div class="row">
-                                <div class="col s12 l6 m12">
+                                <div class="col s12 l6 m12 xl6">
                                     <button class="btn btn-flat white darken-1 profile_buttons" id="follower_count">followers<span class="badge">{{ follower_count }}</span></button>
                                     <button class="btn btn-flat white profile_buttons darken-1" id = "following_count">following <span class="badge"> {{ following_count }}</span></button>
                                 </div>
-                                <div class="col s12 l6 m12">
+                                <div class="col s12 l6 m12 xl6">
                                      <a  href="/{{ user.username }}?show=links" target="_blank" class="btn btn-flat white darken-1 profile_buttons">links<span class="badge" style="margin-top: 4%"> {{ link_count }} </span></a>
                                      <a href="/{{ user.username }}?show=books" target="_blank" class="btn btn-flat white darken-1 profile_buttons" >books<span class="badge" style="margin-top: 4%"> {{ book_count }}</span></a>
                                 </div>
@@ -115,15 +115,15 @@
             </div>
         <!-- Ending of the first Column -->
         <!-- Second Column started -->
-            <div class="col s12 m12 l8">
+            <div class="col s12 m12 l8 xl8">
             <br>
                 <div class="row" style="border-bottom: 3px solid lightgray; padding: 0px;">
-                    <div class="col s6 m6 l6" id="popularLinksDiv">
+                    <div class="col s6 m6 l6 xl6" id="popularLinksDiv">
                                     <div class="header center center-align" id="popularLinksTab" style="padding: 0px; cursor:pointer;">
                         <h5 style="padding: 0px; cursor: pointer" id="popularLinksHeading">Popular Links</h5><br>
                     </div>
                     </div>
-                    <div class="col s6 m6 l6" id="popularBooksDiv">
+                    <div class="col s6 m6 l6 xl6" id="popularBooksDiv">
                                     <div class="header center center-align" style="padding: 0px; cursor: pointer" id="popularBooksTab">
                         <h5 id="popularBooksHeading" style="padding: 0px;" >Popular Books</h5><br>
                     </div>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="row" id="popularLinks" style="padding: 0px; margin: 0px">
-                    <div class="col s12 m12 l6">
+                    <div class="col s12 m12 l6 xl6">
                         {% if links.0 == none %}
                         {% else %}
                             <div class="card card1 horizontal hoverable white-text blue-grey lighten-1">
@@ -206,7 +206,7 @@
                         {% endif %}
                     </div>
 
-                    <div class="col s12 m12 l6">
+                    <div class="col s12 m12 l6 xl6">
 
                                                 {% if links.1 == none %}
                         {% else %}
@@ -286,7 +286,7 @@
                     </div>
             </div>
                 <div class="row" id="popularBooks" style="padding: 0px; margin: 0px">
-                    <div class="col s12 m12 l6">
+                    <div class="col s12 m12 l6 xl6">
                         {% if books.0 == none %}
                         {% else %}
                 <div class="card card1 horizontal hoverable blue-grey white-text lighten-1" >
@@ -321,7 +321,7 @@
                         {% endif %}
                     </div>
 
-                    <div class="col s12 m12 l6">
+                    <div class="col s12 m12 l6 xl6">
 
                         {% if books.1 == none %}
                         {% else %}
