--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -33,9 +33,9 @@
         </div>
         <div class="row" style="padding: 0px; margin: 0px">
             {% for link in book %}
-                <div class="col s12 m12 l4">
+                <div class="col s12 m12 l4 xl4">
                     <div class="row" style="padding: 0px; margin: 0px">
-                        <div class="col s12 m12 l12">
+                        <div class="col s12 m12 l12 xl12">
                 <div class="card card1 horizontal hoverable white-text blue-grey lighten-1">
                   <div class="card-stacked">
                       <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
@@ -72,11 +72,11 @@
                 </div>
             {% endfor %}
             {% if book == none or book|length == 0  %}
-                <div class="col s12 m12 l4"></div>
-                <div class="col s12 m12 l4 flow-text center">
+                <div class="col s12 m12 l4 xl4"></div>
+                <div class="col s12 m12 l4 xl4 flow-text center">
                     This Book is empty. No links here.
                 </div>
-                <div class="col s12 m12 l4"></div>
+                <div class="col s12 m12 l4 xl4"></div>
             {% endif %}
         </div>
     </div>
