--- a/linkbook/links/templates/links/edit_book.html
+++ b/linkbook/links/templates/links/edit_book.html
@@ -7,8 +7,8 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col s1 l3 m3"></div>
-            <div class="col s10 l6 m6 card hoverable">
+            <div class="col s1 l3 m3 xl3"></div>
+            <div class="col s10 l6 m6 xl6card hoverable">
             <h4 class="center">Edit {{book.title}}</h4>
                 <form method="post" action="/book/{{book.id}}/edit/" role="form">
                 {% csrf_token %}
@@ -30,7 +30,7 @@
                 </form>
 
             </div>
-            <div class="col s1 l3 m3"></div>
+            <div class="col s1 l3 m3 xl3"></div>
 
         </div>
 
