--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -61,25 +61,25 @@
 
 <div class="container" style="padding: 0px; margin: 0px">
     <div class="row" style="padding: 0px; margin: 0px">
-        <div class="col s12 m1 l3"></div>
-        <div class="col s12 m10 l6">
+        <div class="col s12 m1 l3 xl3"></div>
+        <div class="col s12 m10 l6 xl6">
             <ul class="collection hoverable "  style="border: 1px solid #607d8b" id="list">
                 <li class="collection-item avatar">
                     <div class="row"  style="padding: 0px; margin: 0px">
                         <!-- user avatar -->
                         <img class="responsive-img circle"  height = "40px" width="40px" src="{{link.user.profile.pic}}" />
                         <div class="row">
-                            <div class="col s12 m4 l4">
+                            <div class="col s12 m4 l4 xl4">
                                 <span class="title blue-grey-text ">{{ link.user }}<br/>
                         <sup>{{ time }}</sup></span>
                         <br><br>
                             </div>
-                           <div class="col s12 m8 l8 right right-align hide-on-med-and-down" id="icons_extra" style="margin: 0px; padding: 0px">
+                           <div class="col s12 m8 l8 xl8 right right-align hide-on-med-and-down" id="icons_extra" style="margin: 0px; padding: 0px">
 
        <!--           <a class='dropdown-button btn' href='#' data-activates='dropdownButtons'>Drop Me!</a> -->
 
                    <div class="row right right-align" style="margin: 0px; padding: 0px">
-                      <div class="col s12 m12 l12 right right-align" style="margin: 0px; padding: 0px">
+                      <div class="col s12 m12 l12 xl12right right-align" style="margin: 0px; padding: 0px">
 
                           <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Show URL" data-activates="dropdown21" id="show_url_button"><i class="material-icons">remove_red_eye</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdown20"><i class="material-icons">share</i></a>
@@ -90,10 +90,10 @@
 
                   </div>
 
-                            <div class="col s12 m8 l8 left left-align hide-on-large-only" id="icons_extra" style="margin: 0px; padding: 0px">
+                            <div class="col s12 m8 l8 xl8 left left-align hide-on-large-only" id="icons_extra" style="margin: 0px; padding: 0px">
 
                    <div class="row left left-align" style="margin: 0px; padding: 0px">
-                      <div class="col s12 m12 l12 left left-align" style="margin: 0px; padding: 0px">
+                      <div class="col s12 m12 l12 xl12 left left-align" style="margin: 0px; padding: 0px">
 
                           <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Show URL" data-activates="dropdown11" id="show_url_button"><i class="material-icons">remove_red_eye</i></a>
                                         <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdown10"><i class="material-icons">share</i></a>
@@ -110,11 +110,11 @@
 
                     </div>
                     <div class="row" style="margin: 0px;">
-                        <div class="col s12 m12 l12">
+                        <div class="col s12 m12 l12 xl12">
                             <i class="material-icons circle blue-grey">description</i>
                             <div>
                                 <div class="row" style="margin-bottom: 0px">
-                                    <div class="col s12 m12 l7">
+                                    <div class="col s12 m12 l7 xl7">
                                         <a href = "{{link.url}}" target="_blank" class="title">
                                             <h5>{{link.title | linebreaksbr}}</h5>
                                         </a>
@@ -125,11 +125,11 @@
                                 <div id="modal10" class="modal">
                                     <div class="modal-content">
                                         <div class="row">
-                                            <div class="col s12 m12 l7">
+                                            <div class="col s12 m12 l7 xl7">
                                                 <div class="title"><a id="link_url" href="{{ link.url }}" target="_blank"> {{ link.url }}</a>  </div>
                                             </div>
-                                            <div class="col s12 m12 l2"></div>
-                                            <div class="col s12 m12 l3">
+                                            <div class="col s12 m12 l2 xl2"></div>
+                                            <div class="col s12 m12 l3 xl3">
                                                 <button title="copy to clipboard" class="btn black white-text" id="copy"> <i class="material-icons black" style="color: white">content_copy</i></button>
                                             </div>
                                         </div>
@@ -204,21 +204,21 @@
                 {% if request.user.is_authenticated %}
                 <li class="collection-item avatar" style="padding: 0px; margin: 0px">
                     <div class="row" style="padding: 0px; margin: 0px">
-                        <div class="col s6 m4 l4" >
+                        <div class="col s6 m4 l4 xl4" >
                             <span> <sup id="upvotes_count">{{ upvotes }}</sup><sup> upvote(s)</sup></span>
                             <button class="btn green upvote upvote_upper_button waves-effect waves-light {{upvote_button}} center" id="upvote_button" link_id = "{{ link.id }}"> <i class="material-icons" style="color: white; background-color: transparent">thumb_up</i> </button>
                         </div>
-                        <div class="col s6 m4 l4" >
+                        <div class="col s6 m4 l4 xl4" >
                             <span> <sup id="downvotes_count">{{ downvotes }} </sup><sup> downvote(s)</sup></span>
                             <button title="downvote" class="btn waves-effect waves-light  red btn-block white-text downvote downvote_upper_button {{ downvote_button }}" id="downvote_button" link_id = "{{ link.id }}" > <i class="material-icons" style="color: white; background-color: transparent" >thumb_down</i></button>
                         </div>
-                        <div class="col s12 m4 l4">
+                        <div class="col s12 m4 l4 xl4">
                             <span>
                             <sup><span id="num_comments1">{{link.comment_set.count}}</span> comment(s)</sup>
                             </span>
                             <button class="btn blue waves-light center waves-effect" id="comments_tab">Comments</button>
                         </div>
-                       <div class="col s12 m12 l12 hide-on-large-only">
+                       <div class="col s12 m12 l12 xl12 hide-on-large-only">
                             <br><br>
                         </div>
                         <br><br><br><br>
@@ -238,11 +238,11 @@
                         </div>
                     </form>
                     <div class="row" style="padding: 0px; margin: 0px">
-                        <div class="col s12 m12 l4">
+                        <div class="col s12 m12 l4 xl4">
                             <button class="btn blue waves-effect waves-light" id="commentSubmitButton">Comment</button>
                         </div>
-                        <div class="col s12 m12 l4"></div>
-                        <div class="col s12 m12 l4"></div>
+                        <div class="col s12 m12 l4 xl4"></div>
+                        <div class="col s12 m12 l4 xl4"></div>
                     </div>
                 </li>
             </ul>
