--- a/linkbook/links/templates/links/tags.html
+++ b/linkbook/links/templates/links/tags.html
@@ -12,8 +12,8 @@
     </div>
     {% for link in tag%}
         <div class="row">
-            <div class="col s1 l4 m4"></div>
-            <div class="col s10 m4 l4">
+            <div class="col s1 l4 m4 xl4"></div>
+            <div class="col s10 m4 l4 xl4">
                 <div class="card horizontal hoverable white-text blue-grey lighten-1">
                   <div class="card-stacked">
                       <div class="card-title center"><h5>{{link.title}}</h5></div>
