--- a/linkbook/links/templates/links/view_books.html
+++ b/linkbook/links/templates/links/view_books.html
@@ -18,10 +18,10 @@
     </div>
     <div class="row" style="padding: 0px; margin: 0px">
         {% for book in view_books %}
-        <div class="col s12 m4 l4">
+        <div class="col s12 m4 l4 xl4">
         <a href="/book/{{ book.id }}">
             <div class="row" style="padding: 0px; margin: 0px">
-                <div class="col s12 m12 l12">
+                <div class="col s12 m12 l12 xl12">
                     <div class="card horizontal hoverable blue-grey white-text lighten-1 ">
                           <div class="card-stacked">
                               <div class="card-title center"><h4>{{ book.title }}</h4></div>
@@ -37,11 +37,11 @@
         </div>
         {% empty %}
             <div class="row" style="padding: 0px; margin: 0px">
-                <div class="col s12 m12 l3"></div>
-            <div class="col s12 m12 l6 flow-text center">
+                <div class="col s12 m12 l3 xl3"></div>
+            <div class="col s12 m12 l6 xl6 flow-text center">
                 Empty. {{ user.username }} has no books.
             </div>
-            <div class="col s12 m12 l3"></div>
+            <div class="col s12 m12 l3 xl3"></div>
             </div>
     {% endfor %}
     </div>
