--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -27,7 +27,7 @@
             height : 37px;
         }
     </style>
-    <div class = "container" style="padding: 0px; margin: 0px">
+    <div class = "container" style="padding: 0px;">
         <div class="row" style="padding: 0px; margin: 0px">
             <h3 class="center blue-grey-text" style="padding: 1%">{{user.username}}'s Book</h3>
         </div>
