--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -129,7 +129,7 @@
     </div>
                         </div>
                         <div class="collapsible-body">
-                            <div class="row" style="padding: 2%">
+                            <div class="row" style="padding: 1px; margin: 1px;">
                             {% for link in book.link_set.all %}
                                 <div class="col s12 m12 l6 xl6">
                                 <div class="card card1 horizontal hoverable blue-grey white-text lighten-1">
