--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -59,7 +59,7 @@
 
 </style>
 
-<div class="container" style="padding: 0px; margin: 0px">
+<div class="container" style="padding: 0px;">
     <div class="row" style="padding: 0px; margin: 0px">
         <div class="col s12 m1 l3 xl3"></div>
         <div class="col s12 m10 l6 xl6">
