--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -43,6 +43,9 @@
         }
     </style>
     <div class="container">
+    <div class="row">
+        <h3 class="center blue-grey-text" style="padding: 1%">{{user.first_name}}'s Links</h3>
+    </div>
         <div class="row" style="margin: 1px; padding: 1px">
             <div class="col s12 m12 l12 xl12">
                 <ul class="collapsible popout" data-collapsible="accordion">
