--- a/linkbook/core/templates/core/temp.html
+++ b/linkbook/core/templates/core/temp.html
@@ -174,7 +174,7 @@
                     <p>
                         {% for tag in ITEM.link.tags.all %}
                     <div class="chip">
-                        <a href = "/../tags/{{tag.name}}/" style="text-decoration: underline">{{tag.name}}</a>
+                        <a href = "/../tags/{{tag.id}}/{{tag.name}}/" style="text-decoration: none">{{tag.name}}</a>
                     </div>
                     </a>
                     {% endfor %}
