--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -115,9 +115,7 @@
                             <div>
                                 <div class="row" style="margin-bottom: 0px">
                                     <div class="col s12 m12 l7 xl7">
-                                        <a href = "{{link.url}}" target="_blank" class="title">
                                             <h5>{{link.title | linebreaksbr}}</h5>
-                                        </a>
                                     </div>
 
                                     </div>
@@ -195,7 +193,7 @@
                     <p>
                         {% for tag in link.tags.all %}
                     <div class="chip">
-                        <a href = "/../tags/{{tag.name}}/" style="text-decoration: underline">{{tag.name}}</a>
+                        <a href = "/../tags/{{tag.id}}/{{tag.name}}/" style="text-decoration: none">{{tag.name}}</a>
                     </div>
                     </a>
                     {% endfor %}
