--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -148,7 +148,7 @@
                                   <p class="TagsP">Tags:
                                     {% for tag in link.tags.all %}
                                         <span class="chip">
-                                      <strong><a href = "/../tags/{{tag.name}}/">{{tag.name}}</a></strong>
+                                      <strong><a href = "/../tags/{{tag.id}}/{{tag.name}}/">{{tag.name}}</a></strong>
                                         </span>
                                     {% endfor %}
                                   </p>
@@ -236,7 +236,7 @@
                                   <p class="TagsP">Tags:
                                     {% for tag in link.tags.all %}
                                         <span class="chip">
-                                      <strong><a href = "/../tags/{{tag.name}}/">{{tag.name}}</a></strong>
+                                      <strong><a href = "/../tags/{{tag.id}}/{{tag.name}}/">{{tag.name}}</a></strong>
                                         </span>
                                     {% endfor %}
                                   </p>
