--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -9,6 +9,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/static/library/css/materialize.css" media="screen,projection"/>
+    <link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
     <title>
         LinkBook | {% block title %}{% endblock %}
     </title>
