--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -168,9 +168,9 @@
                               </p>
 
 <br>
-                          <span class="insideMaterialIcon"><i class="material-icons">thumb_up</i><sup> {{links.0.comment_set.count}}</sup> </span>
+                          <span class="insideMaterialIcon"><i class="material-icons">thumb_up</i><sup> {{links.0.num_vote_up}}</sup> </span>
 
-                          <span class="insideMaterialIcon"><i class="material-icons">thumb_down</i><sup> {{links.0.comment_set.count}}</sup> </span>
+                          <span class="insideMaterialIcon"><i class="material-icons">thumb_down</i><sup> {{links.0.num_vote_down}}</sup> </span>
                           <span class="insideMaterialIcon"><i class="material-icons">comment</i><sup> {{links.0.comment_set.count}}</sup> </span>
 
                           </div>
@@ -209,6 +209,13 @@
                             </span>
                         {% endfor %}
                       </p>
+
+                                                <span class="insideMaterialIcon"><i class="material-icons">thumb_up</i><sup> {{links.2.num_vote_up}}</sup> </span>
+
+                          <span class="insideMaterialIcon"><i class="material-icons">thumb_down</i><sup> {{links.2.num_vote_down}}</sup> </span>
+                          <span class="insideMaterialIcon"><i class="material-icons">comment</i><sup> {{links.2.comment_set.count}}</sup> </span>
+
+
                     </div>
                       </div>
                     <div class="card-action">
@@ -249,6 +256,13 @@
                             </span>
                         {% endfor %}
                       </p>
+
+                                                <span class="insideMaterialIcon"><i class="material-icons">thumb_up</i><sup> {{links.1.num_vote_up}}</sup> </span>
+
+                          <span class="insideMaterialIcon"><i class="material-icons">thumb_down</i><sup> {{links.1.num_vote_down}}</sup> </span>
+                          <span class="insideMaterialIcon"><i class="material-icons">comment</i><sup> {{links.1.comment_set.count}}</sup> </span>
+
+
                     </div>
                       </div>
                     <div class="card-action">
@@ -285,6 +299,14 @@
                             </span>
                         {% endfor %}
                       </p>
+
+                                                <span class="insideMaterialIcon"><i class="material-icons">thumb_up</i><sup> {{links.3.num_vote_up}}</sup> </span>
+
+                          <span class="insideMaterialIcon"><i class="material-icons">thumb_down</i><sup> {{links.3.num_vote_down}}</sup> </span>
+                          <span class="insideMaterialIcon"><i class="material-icons">comment</i><sup> {{links.3.comment_set.count}}</sup> </span>
+
+
+
                     </div>
                       </div>
                     <div class="card-action">
