--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -26,6 +26,11 @@
             overflow: hidden;
             height : 37px;
         }
+      .insideMaterialIcon
+    {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
     </style>
     <div class = "container" style="padding: 0px;">
         <div class="row" style="padding: 0px; margin: 0px">
@@ -56,6 +61,13 @@
                             </span>
                         {% endfor %}
                       </p>
+<br>
+                                                <span class="insideMaterialIcon"><i class="material-icons">thumb_up</i><sup> {{link.num_vote_up}}</sup> </span>
+
+                          <span class="insideMaterialIcon"><i class="material-icons">thumb_down</i><sup> {{link.num_vote_down}}</sup> </span>
+                          <span class="insideMaterialIcon"><i class="material-icons">comment</i><sup> {{link.comment_set.count}}</sup> </span>
+
+
                     </div>
                       </div>
                     <div class="card-action">
