--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -142,6 +142,7 @@
                 <!-- Open Graph data -->
                 {% if link.og_data.title != None %}
                 <li class="collection-item avatar " style="padding: 4px">
+                    <a href="{{ ITEM.link.url }}" style="text-decoration: none; color: black" target="_blank">
                     <div class="card hoverable horizontal">
                         {% if link.og_data.image != None %}
                         <div class="card-image" style="margin: 4px;" id="card_image_div">
@@ -151,10 +152,13 @@
                         <div class="card-stacked">
                             <div class="card-content" style="padding: 2px">
                                 <span><span style="font-weight: bolder">{{ link.og_data.title }}</span></span>
+                                {% if link.og_data.description != None %}
                                 <p style="font-size: 80%">{{ link.og_data.description }}</p>
+                                    {% endif %}
                             </div>
                         </div>
                     </div>
+                    </a>
                 </li>
                 {% endif %}
                 <!-- End of open graph data -->
