--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -171,10 +171,10 @@
                     </li>
                     -->
                 <!-- Tags -->
-                <li class="collection-item avatar" style="padding: 2px">
+                <li class="collection-item avatar" style="padding: 5px; min-height: 10px">
                     <!-- <i class="material-icons circle blue-grey">assignment</i> -->
                   <!--  <span class="title blue-grey-text">Tags</span> -->
-                    <p style="margin: 1px; padding: 1px;">
+                    <p style="margin: 1px; padding: 5px;">
                         {% for tag in ITEM.link.tags.all %}
                     <div class="chip">
                         <a href = "/../tags/{{tag.id}}/{{tag.name}}/" style="text-decoration: none">{{tag.name}}</a>
