--- a/linkbook/templates/taggit_templatetags2/tagcanvas_include_js.html
+++ b/linkbook/templates/taggit_templatetags2/tagcanvas_include_js.html
@@ -2,15 +2,15 @@
 window.onload = function() {
     try {
       TagCanvas.Start('{{ element_id }}_canvas', '{{ element_id }}_tags',{
-        textColour: '#F82035', 
-        textFont: 'helvetica-bold', 
+        textColour: '#0037ff', 
+        textFont: "Palatino", 
         outlineColour: 'transparent',
-        shadow: '#F23E3F',
+        shadow: '#3588cc',
         shadowOffset: [1,1],
         textHeight: 50,
         reverse: true,
         depth: 0.8,
-        maxSpeed: 0.033,
+        maxSpeed: 0.035,
         weight: true,
       });
     
