--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -61,7 +61,7 @@
             <li>
                 <a class="left" href="#" style="font-family: Dosis; font-weight:600; font-size: 18px;">About Us </a>
             </li>
-            <li><a class="left" href="#" style="font-family: Dosis; font-weight:600; font-size: 18px;">Project</a></li>
+            <li><a class="left" href="/project" style="font-family: Dosis; font-weight:600; font-size: 18px;">Project</a></li>
         </ul>
         <ul class="hide-on-med-and-down right">
             {% if not request.user.is_authenticated %}
@@ -97,7 +97,7 @@
             {% endif %}
             <li class="active "><a href="/" style="font-family: Dosis; font-weight:600; font-size: 18px;">Home</a></li>
             <li><a href="#" style="font-family: Dosis; font-weight:600; font-size: 18px;">About Us </a></li>
-            <li><a href="#" style="font-family: Dosis; font-weight:600; font-size: 18px;">Project</a></li>
+            <li><a href="/project" style="font-family: Dosis; font-weight:600; font-size: 18px;">Project</a></li>
             {% if not request.user.is_authenticated %}
                 <li><a href="#modal1" style="font-family: Dosis; font-weight:600; font-size: 18px;">Login</a></li>
                 <li><a href="signup" style="font-family: Dosis; font-weight:600; font-size: 18px;"> Sign Up</a></li>
